<package>
  <!-- Package Metadata -->
  <name>mm_apriltags_tracker</name>
  <maintainer email="Darin.costello@byu.edu">Darin</maintainer>
  <description>
    Allows for multiple cameras to be run simultaniously, each detecting tags and trasnforming them into a common corridante system.
    Adapted from multi_camera_apriltags_tracker with permission. (found here https://github.com/dqyi11/multi_camera_apriltags_tracker.git)
  </description>
  <version>0.0.1</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>april_tag_pos_msg</build_depend>
  <run_depend>april_tag_pos_msg</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
